--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 
                 <div class="about-image" id="aboutImage">
-                    <iframe width="600" height="338" 
+                    <iframe 
                             src="https://res.cloudinary.com/dpybwlkmu/video/upload/v1758117540/Drone_mefyuh.mp4?playlist=VIDEO_ID&loop=1&autoplay=1&mute=1" 
                             frameborder="0" 
                             allow="autoplay; encrypted-media" 
