--- a/assets/subpages/engenharia/engenharia.html
+++ b/assets/subpages/engenharia/engenharia.html
@@ -124,7 +124,7 @@
     <section class="service-detail">
         <div class="container">
             <div class="section-title">
-                <h2>Nossos Projetos</h2>
+                <h2>Nossos Projectos</h2>
                 <p>Conheça alguns dos nossos trabalhos em engenharia mecânica</p>
             </div>
             
