--- a/assets/subpages/engenharia/engenharia.html
+++ b/assets/subpages/engenharia/engenharia.html
@@ -73,7 +73,7 @@
                     <div class="benefit-icon">
                         <i class="fas fa-cogs"></i>
                     </div>
-                    <h4>Projeto e Fabricação</h4>
+                    <h4>Projecto e Fabricação</h4>
                     <p>Desenvolvimento de projectos mecânicos personalizados e fabricação de componentes sob medida para atender às necessidades específicas de cada cliente.</p>
                 </div>
                 
@@ -130,40 +130,40 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.06.38_1_cc9dat.jpg" alt="Projeto 1">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.06.38_1_cc9dat.jpg" alt="Projecto 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.35_xemwnl.jpg" alt="Projeto 2">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.35_xemwnl.jpg" alt="Projecto 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853890/WhatsApp_Image_2025-04-23_at_11.05.02_tv9ea4.jpg" alt="Projeto 3">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853890/WhatsApp_Image_2025-04-23_at_11.05.02_tv9ea4.jpg" alt="Projecto 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.03_skpd7q.jpg" alt="Projeto 4">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.03_skpd7q.jpg" alt="Projecto 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.36_2_gnudhr.jpg" alt="Projeto 5">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.36_2_gnudhr.jpg" alt="Projecto 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.06.38_1_cc9dat.jpg" alt="Projeto 6">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.06.38_1_cc9dat.jpg" alt="Projecto 6">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.05.06_iwniux.jpg" alt="Projeto 7">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.05.06_iwniux.jpg" alt="Projecto 7">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.10.40_1_qgtpia.jpg" alt="Projeto 8">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.10.40_1_qgtpia.jpg" alt="Projecto 8">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853899/IMG_5811_wljqau.jpg" alt="Projeto 9">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853899/IMG_5811_wljqau.jpg" alt="Projecto 9">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853902/DSCF6394_vy4nlc.jpg" alt="Projeto 10">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853902/DSCF6394_vy4nlc.jpg" alt="Projecto 10">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853920/P8290100_mgrewy.jpg" alt="Projeto 11">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853920/P8290100_mgrewy.jpg" alt="Projecto 11">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855561/WhatsApp_Image_2025-04-23_at_11.10.40_1_logxnl.jpg" alt="Projeto 12">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855561/WhatsApp_Image_2025-04-23_at_11.10.40_1_logxnl.jpg" alt="Projecto 12">
                 </div>
             </div>
         </div>
@@ -246,7 +246,7 @@
                             <label for="service">Serviço de Interesse</label>
                             <select id="service" class="form-control">
                                 <option value="engenharia">Engenharia Mecânica</option>
-                                <option value="projeto">Projeto e Fabricação</option>
+                                <option value="Projecto">Projecto e Fabricação</option>
                                 <option value="instalacao">Instalação e Montagem</option>
                                 <option value="manutencao">Manutenção Industrial</option>
                                 <option value="automacao">Automação Industrial</option>
