--- a/assets/subpages/manutencao/manutencao.html
+++ b/assets/subpages/manutencao/manutencao.html
@@ -307,7 +307,7 @@
                                 <option value="manutencao">Manutenção Industrial</option>
                                 <option value="preventiva">Manutenção Preventiva</option>
                                 <option value="preditiva">Manutenção Preditiva</option>
-                                <option value="corretiva">Manutenção Corretiva</option>
+                                <option value="Correctiva">Manutenção Correctiva</option>
                                 <option value="inspecoes">Inspeções Técnicas</option>
                                 <option value="gestao">Gestão de Activos</option>
                             </select>
