--- a/assets/subpages/construcao/construcao.html
+++ b/assets/subpages/construcao/construcao.html
@@ -49,12 +49,12 @@
                 <div class="service-text">
                     <h3>Construções Industriais de Alto Desempenho</h3>
                     <p>
-                        Nossas capacidades internas de fabricação de estruturas metálicas permitem produzir componentes personalizados e de alta qualidade, atendendo às necessidades específicas de cada projeto.
+                        Nossas capacidades internas de fabricação de estruturas metálicas permitem produzir componentes personalizados e de alta qualidade, atendendo às necessidades específicas de cada Projecto.
                         Desde estruturas metálicas e sistemas de tubulação até módulos industriais, mantemos rigorosos padrões de controle de qualidade e precisão para garantir a durabilidade e a segurança de todos os elementos fabricados. Nossas operações em oficina contam com técnicos qualificados e procedimentos de soldagem certificados.
                     </p>
                     <p>
                         Oferecemos serviços completos de construção, incluindo preparação do terreno, montagem estrutural, obras civis e instalação de infraestruturas.
-                        Seja em projetos greenfield (novas instalações) ou brownfield (áreas existentes), asseguramos uma execução eficiente, em conformidade com as normas e com total foco na segurança. Nossas equipes possuem ampla experiência na realização de projetos em ambientes desafiadores, especialmente nos setores de petróleo, gás e indústria.
+                        Seja em Projectos greenfield (novas instalações) ou brownfield (áreas existentes), asseguramos uma execução eficiente, em conformidade com as normas e com total foco na segurança. Nossas equipes possuem ampla experiência na realização de Projectos em ambientes desafiadores, especialmente nos Sectores de petróleo, gás e indústria.
                     </p>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                     <div class="benefit-icon">
                         <i class="fas fa-drafting-compass"></i>
                     </div>
-                    <h4>Projeto Arquitetônico</h4>
+                    <h4>Projecto Arquitetônico</h4>
                     <p>Desenvolvimento de projectos arquitetônicos funcionais e eficientes, optimizados para operações industriais.</p>
                 </div>
                 
@@ -151,7 +151,7 @@
                         <i class="fas fa-clipboard-check"></i>
                     </div>
                     <h4>Gestão de Projectos</h4>
-                    <p>Coordenação completa de projetos, garantindo cumprimento de prazos, orçamentos e padrões de qualidade.</p>
+                    <p>Coordenação completa de Projectos, garantindo cumprimento de prazos, orçamentos e padrões de qualidade.</p>
                 </div>
             </div>
         </div>
@@ -167,40 +167,40 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855560/WhatsApp_Image_2024-08-15_at_16.04.38_rkt7b5.jpg" alt="Projeto 1">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855560/WhatsApp_Image_2024-08-15_at_16.04.38_rkt7b5.jpg" alt="Projecto 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855561/DSCF4154_d3qzt9.jpg" alt="Projeto 2">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855561/DSCF4154_d3qzt9.jpg" alt="Projecto 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855563/DSCF4159_drvykf.jpg" alt="Projeto 3">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855563/DSCF4159_drvykf.jpg" alt="Projecto 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.07.04_rzafsz.jpg" alt="Projeto 4">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.07.04_rzafsz.jpg" alt="Projecto 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855605/P6240084_qxlus2.jpg" alt="Projeto 5">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855605/P6240084_qxlus2.jpg" alt="Projecto 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.50_rlh6ct.jpg" alt="Projeto 6">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.50_rlh6ct.jpg" alt="Projecto 6">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-04-23_at_11.07.05_pz7q3b.jpg" alt="Projeto 7">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-04-23_at_11.07.05_pz7q3b.jpg" alt="Projecto 7">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.56_guc134.jpg" alt="Projeto 8">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.56_guc134.jpg" alt="Projecto 8">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.53_1_bgjtwn.jpg" alt="Projeto 9">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.53_1_bgjtwn.jpg" alt="Projecto 9">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855587/P4240017_ft4jqz.jpg" alt="Projeto 10">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855587/P4240017_ft4jqz.jpg" alt="Projecto 10">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855566/DSCF6430_olmtqw.jpg" alt="Projeto 11">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855566/DSCF6430_olmtqw.jpg" alt="Projecto 11">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855563/DSCF4157_beoebl.jpg" alt="Projeto 12">
+                    <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762855563/DSCF4157_beoebl.jpg" alt="Projecto 12">
                 </div>
             </div>
         </div>
@@ -283,7 +283,7 @@
                             <label for="service">Serviço de Interesse</label>
                             <select id="service" class="form-control">
                                 <option value="construcao">Construção Industrial</option>
-                                <option value="projeto">Projeto Arquitetônico</option>
+                                <option value="Projecto">Projecto Arquitetônico</option>
                                 <option value="estruturas">Estruturas Metálicas</option>
                                 <option value="instalacoes">Instalações Industriais</option>
                                 <option value="obras">Obras Civis</option>
