--- a/assets/subpages/manutencao/manutencao.html
+++ b/assets/subpages/manutencao/manutencao.html
@@ -89,7 +89,7 @@
                         <div class="maintenance-icon">
                             <i class="fas fa-chart-line"></i>
                         </div>
-                        <h3 class="maintenance-title">Manutenção Preditiva</h3>
+                        <h3 class="maintenance-title">Manutenção Predictiva</h3>
                     </div>
                     <p class="maintenance-description">Monitoramento contínuo e análise de dados para prever e prevenir falhas antes que ocorram.</p>
                     <ul class="maintenance-features">
@@ -306,7 +306,7 @@
                             <select id="service" class="form-control">
                                 <option value="manutencao">Manutenção Industrial</option>
                                 <option value="preventiva">Manutenção Preventiva</option>
-                                <option value="preditiva">Manutenção Preditiva</option>
+                                <option value="Predictiva">Manutenção Predictiva</option>
                                 <option value="Correctiva">Manutenção Correctiva</option>
                                 <option value="inspecoes">Inspeções Técnicas</option>
                                 <option value="gestao">Gestão de Activos</option>
