--- a/assets/subpages/manutencao/manutencao.html
+++ b/assets/subpages/manutencao/manutencao.html
@@ -316,7 +316,7 @@
                         <div class="form-group">
                             <label for="urgency">Urgência</label>
                             <select id="urgency" class="form-control">
-                                <option value="planejado">Planejado</option>
+                                <option value="Planeado">Planeado</option>
                                 <option value="urgente">Urgente</option>
                                 <option value="emergencia">Emergência</option>
                             </select>
