--- a/assets/subpages/construcao/construcao.html
+++ b/assets/subpages/construcao/construcao.html
@@ -49,12 +49,12 @@
                 <div class="service-text">
                     <h3>Construções Industriais de Alto Desempenho</h3>
                     <p>
-                        Nossas capacidades internas de fabricação de estruturas metálicas permitem produzir componentes personalizados e de alta qualidade, atendendo às necessidades específicas de cada projeto.
+                        Nossas capacidades internas de fabricação de estruturas metálicas permitem produzir componentes personalizados e de alta qualidade, atendendo às necessidades específicas de cada projecto.
                         Desde estruturas metálicas e sistemas de tubulação até módulos industriais, mantemos rigorosos padrões de controle de qualidade e precisão para garantir a durabilidade e a segurança de todos os elementos fabricados. Nossas operações em oficina contam com técnicos qualificados e procedimentos de soldagem certificados.
                     </p>
                     <p>
                         Oferecemos serviços completos de construção, incluindo preparação do terreno, montagem estrutural, obras civis e instalação de infraestruturas.
-                        Seja em projetos greenfield (novas instalações) ou brownfield (áreas existentes), asseguramos uma execução eficiente, em conformidade com as normas e com total foco na segurança. Nossas equipes possuem ampla experiência na realização de projetos em ambientes desafiadores, especialmente nos setores de petróleo, gás e indústria.
+                        Seja em projectos greenfield (novas instalações) ou brownfield (áreas existentes), asseguramos uma execução eficiente, em conformidade com as normas e com total foco na segurança. Nossas equipes possuem ampla experiência na realização de projectos em ambientes desafiadores, especialmente nos sectores de petróleo, gás e indústria.
                     </p>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                     <div class="benefit-icon">
                         <i class="fas fa-drafting-compass"></i>
                     </div>
-                    <h4>Projeto Arquitetônico</h4>
+                    <h4>projecto Arquitetônico</h4>
                     <p>Desenvolvimento de projectos arquitetônicos funcionais e eficientes, optimizados para operações industriais.</p>
                 </div>
                 
@@ -151,7 +151,7 @@
                         <i class="fas fa-clipboard-check"></i>
                     </div>
                     <h4>Gestão de Projectos</h4>
-                    <p>Coordenação completa de projetos, garantindo cumprimento de prazos, orçamentos e padrões de qualidade.</p>
+                    <p>Coordenação completa de projectos, garantindo cumprimento de prazos, orçamentos e padrões de qualidade.</p>
                 </div>
             </div>
         </div>
@@ -312,7 +312,7 @@
                             <label for="service">Serviço de Interesse</label>
                             <select id="service" class="form-control">
                                 <option value="construcao">Construção Industrial</option>
-                                <option value="projeto">Projeto Arquitetônico</option>
+                                <option value="projeto">Projecto Arquitetônico</option>
                                 <option value="estruturas">Estruturas Metálicas</option>
                                 <option value="instalacoes">Instalações Industriais</option>
                                 <option value="obras">Obras Civis</option>
