--- a/assets/subpages/manutencao/manutencao.html
+++ b/assets/subpages/manutencao/manutencao.html
@@ -334,8 +334,8 @@
                             <select id="service" class="form-control">
                                 <option value="manutencao">Manutenção Industrial</option>
                                 <option value="preventiva">Manutenção Preventiva</option>
-                                <option value="preditiva">Manutenção Preditiva</option>
-                                <option value="corretiva">Manutenção Corretiva</option>
+                                <option value="preditiva">Manutenção Predictiva</option>
+                                <option value="corretiva">Manutenção Correctiva</option>
                                 <option value="inspecoes">Inspeções Técnicas</option>
                                 <option value="gestao">Gestão de Activos</option>
                             </select>
