--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-title" id="contactTitle">
-                <h2>Entre em Contato</h2>
+                <h2>Entre em Contacto</h2>
                 <p>Estamos à disposição para atender suas necessidades</p>
             </div>
             
