--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             
             <ul class="nav-menu" id="navMenu">
                 <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="#services" class="nav-link">Serviços</a></li>
+                <a href="#services" class="nav-link">Serviços ▼</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#web-dev">Engenharia</a></li>
+                    <li><a href="#seo">Construção</a></li>
+                    <li><a href="#design">Engenharia</a></li>
+                </ul>
                 <li class="nav-item"><a href="#about" class="nav-link">Sobre</a></li>
                 <li class="nav-item"><a href="#clients" class="nav-link">Clientes</a></li>
                 <li class="nav-item"><a href="#parceiros" class="nav-link">Parceiros</a></li>
