--- a/assets/subpages/construcao/construcao.html
+++ b/assets/subpages/construcao/construcao.html
@@ -25,12 +25,24 @@
             
             <ul class="nav-menu" id="navMenu">
                 <li class="nav-item"><a href="/index.html" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="/index.html#services" class="nav-link">Serviços</a></li>
+                <li class="nav-item">
+                    <a href="/index.html#services" class="nav-link">Serviços
+                        <svg class="dropdown-arrow" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
+                            <path d="M6 8L2 4h8L6 8z"/>
+                        </svg>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/assets/subpages/engenharia/engenharia.html">Engenharia Mecânica</a></li>
+                        <li><a href="/assets/subpages/construcao/construcao.html">Construção Industrial</a></li>
+                        <li><a href="/assets/subpages/manutencao/manutencao.html">Manutenção de Activos</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="/index.html#about" class="nav-link">Sobre</a></li>
                 <li class="nav-item"><a href="/index.html#clients" class="nav-link">Clientes</a></li>
                 <li class="nav-item"><a href="/index.html#parceiros" class="nav-link">Parceiros</a></li>
                 <li class="nav-item"><a href="/index.html#contact" class="nav-link">Contacto</a></li>
             </ul>
+            
         </div>
     </header>
 
