--- a/index.html
+++ b/index.html
@@ -31,17 +31,24 @@
             
             <ul class="nav-menu" id="navMenu">
                 <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                <a href="#services" class="nav-link">Serviços ▼</a>
-                <ul class="dropdown-menu">
-                    <li><a href="#web-dev">Engenharia</a></li>
-                    <li><a href="#seo">Construção</a></li>
-                    <li><a href="#design">Engenharia</a></li>
-                </ul>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">Serviços
+                        <svg class="dropdown-arrow" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
+                            <path d="M6 8L2 4h8L6 8z"/>
+                        </svg>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="./assets/subpages/engenharia/engenharia.html">Engenharia Mecânica</a></li>
+                        <li><a href="./assets/subpages/construcao/construcao.html">Construção Industrial</a></li>
+                        <li><a href="./assets/subpages/manutencao/manutencao.html">Manutenção de Activos</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="#about" class="nav-link">Sobre</a></li>
                 <li class="nav-item"><a href="#clients" class="nav-link">Clientes</a></li>
                 <li class="nav-item"><a href="#parceiros" class="nav-link">Parceiros</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contacto</a></li>
             </ul>
+
         </div>
     </header>
 
