--- a/index.html
+++ b/index.html
@@ -400,7 +400,11 @@
                 </div>
                 
                 <div class="contact-form" id="contactForm">
-                    <form action="enviar-email.php" method="POST" form-contro="required">
+                    <form
+                        action="https://formspree.io/f/xkgyqpdr"
+                        method="POST"
+                        form-contro="required"
+                    >
                         <div class="form-group">
                             <label for="name">Nome</label>
                             <input type="text" id="name" name="name" class="form-control" required>
