--- a/assets/subpages/construcao/construcao.html
+++ b/assets/subpages/construcao/construcao.html
@@ -299,7 +299,11 @@
                 </div>
                 
                 <div class="contact-form">
-                    <form>
+                    <form
+                        action="https://formspree.io/f/xkgyqpdr"
+                        method="POST"
+                        form-contro="required"
+                    >
                         <div class="form-group">
                             <label for="name">Nome</label>
                             <input type="text" id="name" class="form-control" required>
