--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <form
                         action="https://formspree.io/f/xkgyqpdr"
                         method="POST"
-                        form-contro="required"
+                        form-control="required"
                     >
                         <div class="form-group">
                             <label for="name">Nome</label>
