--- a/assets/subpages/engenharia/engenharia.html
+++ b/assets/subpages/engenharia/engenharia.html
@@ -144,7 +144,7 @@
                 <!-- Project Card 1 -->
                 <a href="projectos/projeto-instalacao-tubagem.html" class="project-card" data-project="project1">
                     <div class="project-image">
-                        <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853892/WhatsApp_Image_2025-04-23_at_11.06.38_1_cc9dat.jpg" alt="Projeto de Instalação Industrial">
+                        <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1764772255/gmtl12_viov23.jpg" alt="Projeto de Instalação Industrial">
                         <div class="project-overlay">
                             <span class="view-project">Ver Projecto</span>
                         </div>
