--- a/assets/subpages/engenharia/engenharia.html
+++ b/assets/subpages/engenharia/engenharia.html
@@ -142,7 +142,7 @@
             
             <div class="projects-grid">
                 <!-- Project Card 1 -->
-                <a href="projectos/projeto-instalacao-tubagem.html" class="project-card" data-project="project1">
+                <a href="projectos/gimtl_grua_de_enchimento.html" class="project-card" data-project="project1">
                     <div class="project-image">
                         <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1764772255/gmtl12_viov23.jpg" alt="Projeto de Instalação Industrial">
                         <div class="project-overlay">
@@ -150,8 +150,9 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">GIMTL-Grua de Enchimento 4</h3>
-                        <p class="project-description">Sistema completo de tubagem para indústria petroquímica</p>
+                        <h3 class="project-title">GIMTL</h3>
+                        <span class="title">Grua de Enchimento 4</span>
+                        <p class="project-description">Expansão Da Grua De Enchimento 1004</p>
                     </div>
                 </a>
 
@@ -164,8 +165,9 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Manutenção de Compressores</h3>
-                        <p class="project-description">Manutenção preventiva em compressores industriais</p>
+                        <h3 class="project-title">IHI POWER SYSTEMS</h3>
+                        <span class="title">Defletores e Suportes do Steam Drum</span>
+                        <p class="project-description">Steam Drum Baffle and Structure Support Plates</p>
                     </div>
                 </div>
 
