--- a/assets/subpages/engenharia/projectos/gimtl_grua_de_enchimento.html
+++ b/assets/subpages/engenharia/projectos/gimtl_grua_de_enchimento.html
@@ -48,7 +48,7 @@
     <section class="project-detail-hero">
         <div class="container">
             <h1 class="service-hero-title">GIMTL - Grua de Enchimento</h1>
-            <p class="service-hero-subtitle">Sistema completo para indústria petroquímica</p>
+            <p class="service-hero-subtitle">Expansão Da Grua De Enchimento 1004</p>
         </div>
     </section>
 
@@ -56,9 +56,13 @@
         <div class="container">
             <div class="project-info">
                 <h3>Descrição do Projecto</h3>
-                <p>Desenvolvimento e implementação de sistema completo de tubagem para unidade petroquímica, incluindo design, fabricação e instalação de toda a rede de distribuição de fluidos industriais.</p>
+                <p>
+                    O projecto consistiu na ampliação da infraestrutura do <strong>GIMTL</strong>. A primeira fase envolveu a extensão do pórtico de carregamento, onde a estrutura foi modificada e ampliada para criar um quarto compartimento. As tubulações de Mogás, Diesel e combate a incêndios foram estendidas, os “skids” pré-fabricados foram instalados e integrados, e as obras civis incluíram demolições e a extensão da drenagem até o separador de óleo-água. A equipe de eléctrica e instrumentação instalou e interligou os novos componentes ao sistema existente.
+                </p>
                 
-                <p>O projecto envolveu a coordenação de múltiplas equipas especializadas e a integração com sistemas existentes, garantindo conformidade com os mais altos padrões de segurança e eficiência.</p>
+                <p>
+                    A segunda fase abrangeu a instalação de um novo tanque de espuma. Para isso, foram executadas demolições, terraplenagem e construção de uma nova laje e bases de concreto. A tubulação foi modificada para conectar o tanque ao sistema de bombeamento de espuma, reforçando o sistema de combate a incêndios do terminal.
+                </p>
                 
                 <div class="project-meta">
                     <div class="meta-item">
@@ -67,7 +71,7 @@
                     </div>
                     <div class="meta-item">
                         <h4>Duração</h4>
-                        <p>6 Meses</p>
+                        <p>4 Meses</p>
                     </div>
                     <div class="meta-item">
                         <h4>Orçamento</h4>
