--- a/assets/subpages/engenharia/engenharia.html
+++ b/assets/subpages/engenharia/engenharia.html
@@ -157,7 +157,7 @@
                 </a>
 
                 <!-- Project Card 2 -->
-                <div class="project-card" data-project="project2">
+                <a href="projectos/ihi_power_systems.html" class="project-card" data-project="project1">
                     <div class="project-image">
                         <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.35_xemwnl.jpg" alt="Manutenção de Equipamentos">
                         <div class="project-overlay">
@@ -169,21 +169,22 @@
                         <span class="title">Defletores e Suportes do Steam Drum</span>
                         <p class="project-description">Steam Drum Baffle and Structure Support Plates</p>
                     </div>
-                </div>
+                </a>
 
                 <!-- Project Card 3 -->
-                <div class="project-card" data-project="project3">
+                <a href="projectos/petromoc_grua_enchimento_zona_c.html" class="project-card" data-project="project1">
                     <div class="project-image">
-                        <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853890/WhatsApp_Image_2025-04-23_at_11.05.02_tv9ea4.jpg" alt="Projecto de Automação">
+                        <img src="https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853891/WhatsApp_Image_2025-04-23_at_11.05.35_xemwnl.jpg" alt="Manutenção de Equipamentos">
                         <div class="project-overlay">
                             <span class="view-project">Ver Projecto</span>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Sistema de Automação</h3>
-                        <p class="project-description">Implementação de sistema automatizado de produção</p>
+                        <h3 class="project-title">Petromoc</h3>
+                        <span class="title">Grua Enchimento Zona "C"</span>
+                        <p class="project-description">Steam Drum Baffle and Structure Support Plates</p>
                     </div>
-                </div>
+                </a>
 
                 <!-- Adicione mais cards conforme necessário -->
                 <!-- Project Card 4 -->
